@@ -172,7 +172,10 @@ class Manifold : public Output<Manifold> {
          */
         virtual AbelianGroup homology() const;
         /**
-         * An alias for homology().  See homology() for further details.
+         * A deprecated alias for homology().
+         *
+         * \deprecated This routine can be accessed by the simpler name
+         * homology().
          *
          * \exception NotImplemented homology calculation has not yet been
          * implemented for this particular 3-manifold.
@@ -186,7 +189,7 @@ class Manifold : public Output<Manifold> {
          * @return the first homology group of this 3-manifold, if this
          * functionality has been implemented.
          */
-        AbelianGroup homologyH1() const;
+        [[deprecated]] AbelianGroup homologyH1() const;
 
         /**
          * Returns whether or not this is a finite-volume hyperbolic manifold.
